# graphical_makefile

./: CMakeLists.txt  Makefile  README.md  main.c
include/: graphical_makefile.h  proto.h  struct.h
infos_texts/: info_clean.txt  info_fclean.txt  info_mouli.txt  info_re.txt
lib/include/: lib.h
lib/src/: divers.c  my_putchar.c  my_putnbr.c  my_putstr.c  my_split.c  my_str_to_word_array.c  my_strlen.c  my_strncpy.c
src/: action_enter.c  graphical_makefile.c  init_strcut.c  loop.c  print.c  quit.c  selector.c
